# semantex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  coordination_request.md  install.ps1  install.sh  server.json
benchmarks/relevance/: .gitignore  README.md  pyproject.toml
benchmarks/relevance/config/: baselines.yaml  coir_subset.yaml  csn_subset.yaml
benchmarks/relevance/fixtures/: sample_verified_subset.json  tiny_eval_corpus.json  tiny_swe_loc_instance.json
benchmarks/relevance/fixtures/route_stress/: README.md  curated_flask.json  curated_gin.json  curated_platform.json  flask_route_stress.json  gen_route_stress.py  gin_route_stress.json  platform_route_stress.json  spec_flask.json  spec_gin.json  spec_platform.json
benchmarks/relevance/fixtures/tiny_corpus/: auth.py  db.py  util.py
benchmarks/relevance/results/: rerank-experiment.md
benchmarks/relevance/results/csn-sweep/: report.md
benchmarks/relevance/results/route_stress/: report-flask.json  report-gin.json  report-platform.json  report.json  report.md
benchmarks/relevance/scripts/: lateon_probe.py  reproduce_baseline.py  route_stress.py  run.py  swe_loc_localize.py
benchmarks/relevance/src/relevance_harness/: __init__.py  indexing.py  metrics.py  report.py  ripgrep_baseline.py  route_eval.py  runner.py  semantex_client.py  subset.py  swe_loc_runner.py  tokens.py  types.py
benchmarks/relevance/tests/: conftest.py  test_coir.py  test_csn.py  test_indexing.py  test_metrics.py  test_metrics_vs_pytrec_eval.py  test_report.py  test_reproduce_baseline.py  test_ripgrep_baseline.py  test_route_eval.py  test_runner.py  test_runner_e2e.py  test_semantex_client.py  test_subset.py  test_swe_loc.py  test_swe_loc_localize.py  test_swe_loc_runner.py  test_tokens.py  test_types.py
benchmarks/swe_bench/: README.md  pyproject.toml
benchmarks/swe_bench/config/: conditions.yaml  instances_phase_a.txt  models.yaml
benchmarks/swe_bench/fixtures/: tiny_verified_subset.json
benchmarks/swe_bench/scripts/: compare_conditions.py  materialize_instance_lists.py  pre_index.py  run.py  submit.py
benchmarks/swe_bench/scripts/vm/: vm_bootstrap.sh  vm_phase_a.sh  vm_resume.sh  vm_smoke.sh
benchmarks/swe_bench/src/swe_bench_harness/: __init__.py  analyze.py  conditions.py  dataset.py  evaluator.py  indexer.py  metrics.py  orchestrator.py  repo_checkout.py  report.py  runner.py  stats.py
benchmarks/swe_bench/tests/: conftest.py  test_analyze.py  test_compare_conditions.py  test_conditions.py  test_dataset.py  test_evaluator.py  test_indexer.py  test_mcp_config.py  test_mcp_integration.py  test_metrics.py  test_orchestrator.py  test_repo_checkout.py  test_report.py  test_runner.py  test_stats.py
crates/sage-cli/: Cargo.toml
crates/sage-cli/src/: client.rs  main.rs
crates/sage-cli/src/commands/: connect.rs  disconnect.rs  download.rs  hooks.rs  index.rs  install.rs  mcp.rs  search.rs  serve.rs  status.rs  stop.rs  watch.rs
crates/sage-mcp/: Cargo.toml
crates/sage-mcp/src/: lib.rs  server.rs
crates/semantex-cli/: Cargo.toml
crates/semantex-cli/src/: client.rs  main.rs  telemetry.rs
crates/semantex-cli/src/commands/: connect.rs  derive_shortlists.rs  distill_centroids.rs  distill_corpus.rs  distill_mixer.rs  distill_static_table.rs  download.rs  federated.rs  history.rs  hooks.rs  index.rs  install.rs  llm_status.rs  mcp.rs  mod.rs  search.rs  serve.rs  skills_generate.rs  status.rs  stop.rs  validate.rs  watch.rs
crates/semantex-cli/src/skills/: mod.rs  tools.rs
crates/semantex-core/: Cargo.toml
crates/semantex-core/benches/: simd_bench.rs
crates/semantex-core/examples/: test_reranker.rs
crates/semantex-core/src/: config.rs  lib.rs  memory.rs  priority.rs  types.rs
crates/semantex-core/src/chunking/: ast_chunker.rs  call_graph.rs  doc_parser.rs  import_resolver.rs  mod.rs  pdf_chunker.rs  semantic_role.rs  structured_meta.rs  text_chunker.rs
crates/semantex-core/src/embedding/: centroid_train.rs  cinder.rs  colbert.rs  mixer.rs  mixer_train.rs  mod.rs  model_manager.rs  runtime_manager.rs  shortlists.rs  single_vector.rs  single_vector_model.rs  static_distill.rs  static_table.rs  static_token.rs
crates/semantex-core/src/file/: detector.rs  hasher.rs  walker.rs  watcher.rs
crates/semantex-core/src/index/: architecture.rs  branches.rs  builder.rs  docs_scaffold.rs  file_classifier.rs  gate.rs  global_graph.rs  history.rs  hnsw_index.rs  layout.rs  memory.rs  mod.rs  page_rank.rs  pattern_catalog.rs  registry.rs  state.rs  storage.rs  updater.rs  validate.rs
crates/semantex-core/src/llm/: classifier.rs  genai_backend.rs  hyde.rs  loader.rs  mod.rs  prompts.rs  subscription_cli.rs
crates/semantex-core/src/model/: capabilities.rs  manifest.rs  mod.rs  registry.rs  spec.rs
crates/semantex-core/src/search/: adaptive.rs  agent.rs  agent_classifier.rs  agent_formatter.rs  code_tokenizer.rs  colbert_plaid_backend.rs  deep.rs  dense_backend.rs  fastembed_reranker.rs  federation.rs  graph_propagation.rs  graph_stage.rs  hybrid.rs  mmr.rs  mod.rs  onnx_reranker.rs  path_signals.rs  plaid_search.rs  planner.rs  query_classifier.rs  query_expander.rs  regex_semantic.rs  reranker_download.rs  reranker_engine.rs  reranker_model.rs  ripgrep_fallback.rs  semantic_cache.rs  simd.rs  sparse_search.rs  summarize.rs  triple_fusion.rs
crates/semantex-core/src/server/: cache.rs  handler.rs  listener.rs  mod.rs  protocol.rs  tests.rs
crates/semantex-core/tests/: README.md  TEST_RESULTS.md  coderank_hnsw_backend_test.rs  dense_backend_golden_test.rs  embedding_test.rs  federation_cross_repo_test.rs  formatter_snapshot_test.rs  graph_stage_localization.rs  llm_smoke.rs  model_registry_golden_test.rs  pdf_incremental_reindex_test.rs  reranker_off_by_default_test.rs  search_accuracy_test.rs  semantic_cache_reindex_test.rs  tokenizers_dep_smoke.rs  toml_dep_smoke.rs
crates/semantex-core/tests/fixtures/: dense_backend_golden.txt
crates/semantex-mcp/: Cargo.toml
crates/semantex-mcp/src/: docs_context.rs  http_transport.rs  lib.rs  memory_tools.rs  protocol.rs  server.rs
(+179 files in other folders)
