[workspace]
members = ["crates/semantex-cli", "crates/semantex-core", "crates/semantex-mcp"]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.91"
repository = "https://github.com/MisterTK/semantex"
homepage = "https://semantex.dev"
description = "Semantex — semantic code search — hybrid ColBERT + BM25 retrieval engine"
keywords = ["search", "semantic", "code", "embedding", "colbert"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
semantex-core = { path = "crates/semantex-core" }
semantex-mcp = { path = "crates/semantex-mcp" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "net", "process", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
postcard = { version = "1", features = ["use-std"] }
regex = "1"
# LLM integration (Spec L Phase 1 — behind `llm` feature in semantex-core).
# These are listed as non-optional in the workspace so downstream crates can
# reference them; the `optional = true` that gates compilation lives in
# semantex-core/Cargo.toml (the only crate that uses them).
genai = "0.5"
async-trait = "0.1"
which = "8"
# next-plaid 1.4: brings UpdateConfig.batch_size + buffer_size + force_cpu knobs,
# the (MmapIndex, Vec<i64>) return tuple from update_or_create, and the streaming
# encode_index_chunk / write_index_from_encoded_chunks APIs. Critical: drop the
# coreml feature — on macOS it loaded CoreMLExecutionProvider even when not
# explicitly opted in, and CoreML's partition+buffer pattern allocated 10+ GB on
# 2 k-chunk repos. CPU is the default; opt back in to GPU via the SEMANTEX_COREML
# env var (gated in colbert.rs builder) if/when CoreML's memory profile improves.
next-plaid = "1.3"
next-plaid-onnx = "1.3"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "allow"
float_cmp = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[patch.crates-io]
next-plaid = { path = "vendor/next-plaid" }
