[workspace]
members = ["crates/semantex-cli", "crates/semantex-core", "crates/semantex-mcp"]
resolver = "3"

[workspace.package]
version = "1.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.91"
repository = "https://github.com/MisterTK/semantex"
homepage = "https://semantex.dev"
description = "Semantex — semantic code search — hybrid dense + BM25 retrieval engine"
keywords = ["search", "semantic", "code", "embedding", "retrieval"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
semantex-core = { path = "crates/semantex-core", version = "1.1.0" }
semantex-mcp = { path = "crates/semantex-mcp", version = "1.1.0" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "net", "process", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
postcard = { version = "1", features = ["use-std"] }
regex = "1"
# LLM integration (Spec L Phase 1 — behind `llm` feature in semantex-core).
# These are listed as non-optional in the workspace so downstream crates can
# reference them; the `optional = true` that gates compilation lives in
# semantex-core/Cargo.toml (the only crate that uses them).
genai = "0.6.5"
async-trait = "0.1"
which = "8"
# next-plaid 1.6: vendored PLAID engine (Apache-2.0, pure-Rust over ndarray, mmap,
# residual quantization; pulls NO ort) + next-plaid-onnx (crates.io, the ONNX
# ColBERT encoder; pulls ort). Powers the OPT-IN late-interaction dense backend
# (SEMANTEX_EMBEDDER=lateon-colbert); coderank-hnsw stays the default. CPU-only by
# default (force_cpu); CoreML opt-in via SEMANTEX_COREML. Bumped from 1.3.1 to
# 1.6.2 (2026-07-09): verified the exact API surface we call (Colbert::builder's
# with_quantized/with_threads/with_batch_size/with_execution_provider/build;
# IndexConfig/UpdateConfig field names; MmapIndex::update_or_create/delete/load
# signatures) is UNCHANGED across this range — see
# docs/research/2026-07-09-next-plaid-capability-gap-analysis.md.
next-plaid = "1.6.2"
next-plaid-onnx = "=1.6.2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "allow"
float_cmp = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
# Unwind (not abort) so a panic inside a third-party file parser (e.g. the
# pdf-extract crate, which unwrap()s on malformed PDFs) can be caught at the
# per-file chunking boundary and skip just that file, instead of aborting the
# whole `semantex index` run. semantex ingests arbitrary files from arbitrary
# repos, so robustness to one bad file outweighs abort's marginal size win.
panic = "unwind"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Vendored next-plaid carries the kmeans chunk_size_data memory fix (26GB→9GB on
# 2k-chunk repos, commit d4930a9) that upstream crates.io 1.3 lacks — keep the
# path override so the patched engine is what builds. Only next-plaid is vendored;
# next-plaid-onnx comes from crates.io unchanged.
[patch.crates-io]
next-plaid = { path = "vendor/next-plaid" }
