[project]
name = "relevance-harness"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "click>=8.1",
  "datasets>=2.20",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "pytrec_eval>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Entrypoint scripts bootstrap sys.path (src/ + sibling swe_bench) before importing
# the harness, so module-level imports legitimately follow runtime code.
"scripts/*.py" = ["E402"]
# This test calls pytest.importorskip("pytrec_eval") before importing metrics, so
# the import deliberately follows the skip guard.
"tests/test_metrics_vs_pytrec_eval.py" = ["E402"]
