[package]
name = "semantex-cli"
description = "CLI for semantex semantic code search"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "semantex"
path = "src/main.rs"

[dependencies]
semantex-core.workspace = true
semantex-mcp = { workspace = true, optional = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4", features = ["derive", "env"] }
colored = "3"
bincode = { workspace = true }
dirs = "6"
mimalloc = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["mcp"]
mcp = ["dep:semantex-mcp"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/semantex-v{ version }-{ target }.tar.gz"
bin-dir = "semantex-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[lints]
workspace = true
