[package]
name = "semantex-core"
description = "Core library for semantex semantic code search (indexing, embeddings, search)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
cuda = ["ort/cuda"]
# LLM-driven classifier + HyDE retrieval (Spec L Phase 1).
# Default build brings in zero LLM deps; opt in with `--features llm`.
llm = ["dep:genai", "dep:tokio", "dep:async-trait", "dep:which"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# FastEmbed for cross-encoder reranking (TextRerank)
fastembed = "5.9"

# Tokenizer for the generic ONNX cross-encoder reranker (search/onnx_reranker.rs).
# `from_file` + `encode` + `with_truncation` are all we use. We request the
# PURE-RUST regex backend (`fancy-regex`) with `default-features = false` so OUR
# dependency edge adds NO net-new C/C++ vendor surface (no `progressbar`/
# `esaxx_fast` C++ defaults of our own). NOTE: `onig`/`onig_sys` are NOT removed
# from the build — `cargo tree -i onig` still shows them, because `fastembed 5.9`
# (and `next-plaid-onnx`) pull the same `tokenizers` crate WITH the `onig`
# feature, and Cargo unifies features across the graph onto the shared crate.
# So onig is unavoidable via fastembed's feature unification; it is airgap-safe
# because it is already vendored transitively (S3 introduces no new requirement).
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }

# fp16 logits extraction for the Qwen3-Reranker ONNX export (its `logits` output
# node is FLOAT16; verified via onnx introspection — see research-notes ## S3).
# `try_extract_tensor::<half::f16>()` requires ort's `half` feature (enabled
# below), and we reference `half::f16` directly to convert fp16 -> f32. `half`
# is already in the tree transitively; this only promotes it to a direct dep.
half = "2"

# ONNX Runtime — direct dependency for execution provider configuration (CoreML/CUDA/CPU);
# fastembed depends on ort transitively, but we need the `ort::ep` types directly.
#
# We declare `load-dynamic` (NOT download-binaries) to match reality: `next-plaid-onnx`
# pulls `ort` with the `load-dynamic` feature (→ `ort-sys/disable-linking`), and because
# Cargo features are additive across the graph, the binary is ALWAYS in dynamic-loading
# mode — `ort-sys`'s build script early-returns on `disable-linking`, so nothing is ever
# statically linked or downloaded at build time. The ONNX Runtime shared library is
# instead provisioned at runtime (see embedding/runtime_manager.rs) and located via
# ORT_DYLIB_PATH. Declaring `download-binaries` here was a misleading no-op.
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray", "std", "load-dynamic", "half"] }

# Pure-Rust HNSW ANN index for the coderank-hnsw dense backend (S2 Spike 2).
# MIT OR Apache-2.0, NO C/C++ deps (cargo tree verified). Build-once index; we
# rebuild the in-RAM graph on open from our own int8 vector store (delete =
# compact + re-persist), so the crate's lack of native insert/delete is by
# design — see docs/superpowers/plans/2026-05-31-research-notes.md (S2 Spike 2).
instant-distance = "0.6"

# Full-text search (BM25)
tantivy = { version = "0.26", features = ["stemmer"] }

# AST parsing
tree-sitter = "0.26.9"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-md = "0.5.3"
tree-sitter-json = "0.24.8"
tree-sitter-toml-ng = "0.7"
tree-sitter-dart-orchard = "0.3"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-scala = "0.26"
tree-sitter-php = "0.24"
tree-sitter-lua = "0.5"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.25"
tree-sitter-zig = "1"
tree-sitter-r = "1"
tree-sitter-html = "0.23"
tree-sitter-swift = "0.7.2"
tree-sitter-elixir = "0.3.5"
tree-sitter-svelte-next = "0.1"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-vue-next = "0.1"
# tree-sitter-sql (0.19): Not yet available with tree-sitter 0.26+ API
# (LANGUAGE static). Falls back to text chunking until a compatible version
# is published.

# File handling
ignore = "0.4"
globset = "0.4"
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-full = "0.7"

# Storage
rusqlite = { version = "0.38", features = ["bundled"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Parallelism
rayon = "1"
ndarray = "0.16"

# HTTP (model download only)
ureq = "3"

# Progress bars
indicatif = "0.18"

# PDF
pdf-extract = "0.10"

# Config
serde_yml = "0.0.12"

# TOML parser for the user model manifest (model/manifest.rs `models.toml`).
# Pure Rust, no C/sys deps (verified via `cargo tree`) — keeps the airgap/offline
# build clean. We only use `toml::from_str` / serde-derive deserialization.
toml = "0.8"

# Cross-platform
dirs = "6"
ctrlc = { version = "3", features = ["termination"] }
tempfile = "3"
walkdir = "2"
postcard = { workspace = true }
parking_lot = "0.12"
regex = { workspace = true }
rust-stemmers = "1.2"
next-plaid.workspace = true
next-plaid-onnx.workspace = true
# Optional — pulled in only with `--features llm` (Spec L Phase 1)
genai = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
which = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# Memory-mapped files (cold-start: PLAID mapping file mmap'd on Unix; falls back
# to read-on-open on Windows per E8 risk T5).
# flate2 + tar: extract the official ONNX Runtime `.tgz` release (runtime_manager.rs).
[target.'cfg(not(target_os = "windows"))'.dependencies]
memmap2 = "0.9"
flate2 = "1"
tar = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# zip: extract the official ONNX Runtime `.zip` release on Windows (runtime_manager.rs).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_System_ProcessStatus"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "simd_bench"
harness = false

[lints]
workspace = true
