[package]
name = "semantex-mcp"
description = "MCP server for semantex semantic code search"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
semantex-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot = "0.12"

[lints]
workspace = true
