[package]
name = "semantex-mcp"
description = "MCP server for semantex semantic code search"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
semantex-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
parking_lot = "0.12"
# Used by M5/M6 to query `pattern_matches` + `chunk_centrality` SQLite tables
# directly (W4 owns ChunkStore; these tables don't yet have helper accessors).
rusqlite = { version = "0.38", features = ["bundled"] }

# HTTP transport (I2) — optional, gated by feature "http".
tokio = { workspace = true, optional = true }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"], optional = true }
tower = { version = "0.5", default-features = false, optional = true }
# Bearer-token auth (Wave 1 section C): rand 0.9 already resolves in
# Cargo.lock via semantex-core's dependency graph, so this direct edge adds
# zero new compiled crates.
rand = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["http"]
http = ["dep:tokio", "dep:axum", "dep:tower", "dep:rand"]
llm = ["semantex-core/llm", "dep:tokio"]

[lints]
workspace = true
